Code cleanup (4): primitives